generated/checkers/gen/AllGen-Concurrency-78ec6f9df6642418411c534683da6133e0962ec7/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndAnalysis(clang::ento::ExplodedGraph&, clang::ento::BugReporter&, clang::ento::ExprEngine&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:323:44: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*&, const clang::SourceManager&, clang::ASTContext&)’
  323 |         PathDiagnosticLocation::createBegin(RemoteS, BR.getSourceManager(),
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  324 |                                             Eng.getContext());
      |                                             ~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:27: note:   no known conversion for argument 1 from ‘const clang::Stmt*’ to ‘const clang::Decl*’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |               ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:269:81: note:   no known conversion for argument 3 from ‘clang::ASTContext’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  269 |                                             const LocationOrAnalysisDeclContext LAC);
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:330:46: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*&, const clang::SourceManager&, clang::ASTContext&)’
  330 |           PathDiagnosticLocation::createBegin(S, BR.getSourceManager(),
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
  331 |                                               Eng.getContext());
      |                                               ~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:27: note:   no known conversion for argument 1 from ‘const clang::Stmt*’ to ‘const clang::Decl*’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |               ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:269:81: note:   no known conversion for argument 3 from ‘clang::ASTContext’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  269 |                                             const LocationOrAnalysisDeclContext LAC);
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
